# my-bot-checker

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  pattern.rs
tests/: bot_detector_tests.rs
